--- a/FXCM_Demo.ipynb
+++ b/FXCM_Demo.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TOKEN = '04a6b90b8a0f1ffab2e78ed6128798800a27b8b7' # Token demo\n",
+    "TOKEN = '' # Token demo\n",
     "con = fxcmpy.fxcmpy(access_token = TOKEN, log_level = 'error', server = 'demo')"
    ]
   },
